Fix overflow

--- a/app/index.css
+++ b/app/index.css
@@ -18,7 +18,6 @@ html, body {
   flex-direction: column;
   height: 100%;
   width: 100%;
-  overflow: scroll;
 }
 
 .input-container {
